Start of OMXRender

--- a/xbmc/cores/VideoRenderers/Makefile.in
+++ b/xbmc/cores/VideoRenderers/Makefile.in
@@ -18,6 +18,7 @@ endif
 ifeq (@USE_OPENGLES@,1)
 SRCS += LinuxRendererGLES.cpp
 SRCS += OverlayRendererGL.cpp
+SRCS += OMXRenderer.cpp
 endif
 
 LIB = VideoRenderer.a
