--- a/src/cores/dvdplayer/DVDCodecs/Makefile.in
+++ b/src/cores/dvdplayer/DVDCodecs/Makefile.in
@@ -1,4 +1,4 @@
-INCLUDES+=-I@abs_top_srcdir@/xbmc/cores/dvdplayer
+INCLUDES+=-I@abs_top_srcdir@/src/cores/dvdplayer
 
 SRCS  = DVDCodecUtils.cpp
 SRCS += DVDFactoryCodec.cpp
