--- a/src/cores/dvdplayer/DVDCodecs/Overlay/Makefile.in
+++ b/src/cores/dvdplayer/DVDCodecs/Overlay/Makefile.in
@@ -1,4 +1,4 @@
-INCLUDES+=-I@abs_top_srcdir@/xbmc/cores/dvdplayer
+INCLUDES+=-I@abs_top_srcdir@/src/cores/dvdplayer
 
 SRCS  = DVDOverlayCodec.cpp
 SRCS += DVDOverlayCodecCC.cpp
