config: Add -finstrument-functions

--- a/tools/depends/configure.in
+++ b/tools/depends/configure.in
@@ -301,14 +301,14 @@ if test "$use_platform" = "raspberry-pi"; then
    -mfpu=vfp -mabi=aapcs-linux -Wno-psabi -Wa,-mno-warn-deprecated \
    -Wno-deprecated-declarations -isystem${use_firmware}/opt/vc/include \
    -isystem${use_firmware}/opt/vc/include/interface/vcos/pthreads \
-   -isystem${use_firmware}/opt/vc/include/interface/vmcs_host/linux"
+   -isystem${use_firmware}/opt/vc/include/interface/vmcs_host/linux -finstrument-functions"
   platform_cxxflags="-pipe -mcpu=arm1176jzf-s -mtune=arm1176jzf-s \
    -mfloat-abi=hard -mfpu=vfp -mabi=aapcs-linux -Wno-psabi \
    -Wa,-mno-warn-deprecated -Wno-deprecated-declarations \
    -isystem${use_firmware}/opt/vc/include \
    -isystem${use_firmware}/opt/vc/include/interface/vcos/pthreads \
-   -isystem${use_firmware}/opt/vc/include/interface/vmcs_host/linux"
-  platform_ldflags="-L${use_firmware}/opt/vc/lib -lEGL -lGLESv2 -lbcm_host -lvcos \
+   -isystem${use_firmware}/opt/vc/include/interface/vmcs_host/linux -finstrument-functions"
+  platform_ldflags="-L${use_firmware}/opt/vc/lib -lEGL -lGLESv2 -lbcm_host -lvcos -lmmal -lmmal_core -lmmal_util \
    -lvchiq_arm"
 fi
 
