--- a/xbmc/utils/Makefile.in
+++ b/xbmc/utils/Makefile.in
@@ -22,7 +22,6 @@ SRCS += fastmemcpy-arm.S
 SRCS += FileOperationJob.cpp
 SRCS += FileUtils.cpp
 SRCS += fstrcmp.c
-SRCS += fft.cpp
 SRCS += GLUtils.cpp
 SRCS += GroupUtils.cpp
 SRCS += HTMLUtil.cpp
@@ -49,6 +48,7 @@ SRCS += POUtils.cpp
 SRCS += ProgressJob.cpp
 SRCS += RecentlyAddedJob.cpp
 SRCS += RegExp.cpp
+SRCS += rfft.cpp
 SRCS += RingBuffer.cpp
 SRCS += RssManager.cpp
 SRCS += RssReader.cpp
